<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" tools:ignore="Typos">Submission1</string>
    <!-- Splash Screen -->
    <string name="github">Github</string>
    <string name="icon">Icon</string>
    <!-- Home -->
    <string name="recommendation">People You May Know</string>
    <!-- User -->
    <string name="name">Full Name</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="company">Company</string>
    <string name="location">Location</string>
    <string name="repository">Repository</string>
    <string name="n_repository">10 repository</string>
    <string name="follower">followers</string>
    <string name="n_follower">800</string>
    <string name="following">following</string>
    <string name="n_following">10</string>
    <string name="dot">•</string>
    <!-- Toggle Button -->
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="open_ig">Open Instagram</string>

    <!-- User's Username -->
    <string-array name="username">
        <item>bintangfrnz_</item>
        <item>JakeWharton</item>
        <item>amitshekhariitbhu</item>
        <item>romainguy</item>
        <item>chrisbanes</item>
        <item>tipsy</item>
        <item>ravi8x</item>
        <item>jasoet</item>
        <item>budioktaviyan</item>
        <item>hendisantika</item>
        <item>sidiqpermana</item>
    </string-array>

    <!-- User's Name -->
    <string-array name="name">
        <item>Bintang Fajarianto</item>
        <item>Jake Wharton</item>
        <item>Amit Shekhar</item>
        <item>Romain Guy</item>
        <item>Chris Banes</item>
        <item>David</item>
        <item>Ravi Tamada</item>
        <item>Deny Prasetyo</item>
        <item>Budi Oktaviyan</item>
        <item>Hendi Santika</item>
        <item>Sidiq Permana</item>
    </string-array>

    <!-- User's Location -->
    <string-array name="location">
        <item>Bandung, Indonesia</item>
        <item>Pittsburgh, PA, USA</item>
        <item>New Delhi, India</item>
        <item>California</item>
        <item>Sydney, Australia</item>
        <item>Trondheim, Norway</item>
        <item>India</item>
        <item>Kotagede, Yogyakarta, Indonesia</item>
        <item>Jakarta, Indonesia</item>
        <item>Bojongsoang - Bandung Jawa Barat</item>
        <item>Jakarta Indonesia</item>
    </string-array>

    <!-- User's Num of Repository -->
    <string-array name="repository">
        <item>23</item>
        <item>102</item>
        <item>37</item>
        <item>9</item>
        <item>30</item>
        <item>56</item>
        <item>28</item>
        <item>44</item>
        <item>110</item>
        <item>1064</item>
        <item>65</item>
    </string-array>

    <!-- User's Company -->
    <string-array name="company">
        <item>Dicoding Indonesia</item>
        <item>Google, Inc.</item>
        <item>MindOrksOpenSource</item>
        <item>Google</item>
        <item>Google working on @android</item>
        <item>Working Group Two</item>
        <item>AndroidHive | Droid5</item>
        <item>gojek-engineering</item>
        <item>KotlinID</item>
        <item>JVMDeveloperID @KotlinID @IDDevOps</item>
        <item>Nusantara Beta Studio</item>
    </string-array>

    <!-- User's Follower -->
    <string-array name="followers">
        <item>1001</item>
        <item>56995</item>
        <item>5153</item>
        <item>7972</item>
        <item>14725</item>
        <item>788</item>
        <item>18628</item>
        <item>277</item>
        <item>178</item>
        <item>428</item>
        <item>465</item>
    </string-array>

    <!-- User's Following -->
    <string-array name="following">
        <item>11</item>
        <item>12</item>
        <item>2</item>
        <item>0</item>
        <item>1</item>
        <item>0</item>
        <item>3</item>
        <item>39</item>
        <item>23</item>
        <item>61</item>
        <item>10</item>
    </string-array>

    <!-- User's Avatar -->
    <string-array name="avatar">
        <item>@drawable/user0</item>
        <item>@drawable/user1</item>
        <item>@drawable/user2</item>
        <item>@drawable/user3</item>
        <item>@drawable/user4</item>
        <item>@drawable/user5</item>
        <item>@drawable/user6</item>
        <item>@drawable/user7</item>
        <item>@drawable/user8</item>
        <item>@drawable/user9</item>
        <item>@drawable/user10</item>
    </string-array>
</resources>