<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/DefaultViewGroup"
    tools:context=".ui.DetailUserActivity">

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/custom_action_bar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_left"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_right"
        android:orientation="vertical"
        style="@style/Content"
        app:layout_constraintGuide_percent="0.96" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_mid_image"
        style="@style/Content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="115dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/detail_avatar"
        style="@style/CircleImage"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/action_bar_layout"
        tools:ignore="ImageContrastCheck"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/detail_name"
        style="@style/Content.Big"
        android:text="@string/name"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@id/guideline_mid_image"
        app:layout_constraintStart_toEndOf="@id/detail_avatar"/>

    <TextView
        android:id="@+id/detail_username"
        style="@style/Content.Small.Gray"
        android:text="@string/username"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@id/guideline_mid_image"
        app:layout_constraintStart_toEndOf="@id/detail_avatar"/>

    <ImageView
        android:id="@+id/ic_office"
        style="@style/IconProfile"
        android:src="@drawable/ic_office"
        android:contentDescription="@string/icon"
        app:layout_constraintTop_toBottomOf="@+id/detail_avatar"
        app:layout_constraintStart_toStartOf="@id/guideline_left" />

    <TextView
        android:id="@+id/detail_company"
        style="@style/Content.Small"
        android:text="@string/company"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/ic_office"
        app:layout_constraintBottom_toBottomOf="@+id/ic_office"
        app:layout_constraintStart_toEndOf="@+id/ic_office" />

    <ImageView
        android:id="@+id/ic_location"
        style="@style/IconProfile"
        android:src="@drawable/ic_location"
        android:contentDescription="@string/icon"
        app:layout_constraintTop_toBottomOf="@+id/ic_office"
        app:layout_constraintStart_toEndOf="@+id/guideline_left" />

    <TextView
        android:id="@+id/detail_location"
        style="@style/Content.Small"
        android:text="@string/location"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/ic_location"
        app:layout_constraintStart_toEndOf="@+id/ic_location" />

    <ImageView
        android:id="@+id/ic_repository"
        style="@style/IconProfile"
        android:src="@drawable/ic_repository"
        android:contentDescription="@string/icon"
        app:layout_constraintTop_toBottomOf="@+id/ic_location"
        app:layout_constraintStart_toEndOf="@+id/guideline_left" />

    <TextView
        android:id="@+id/detail_repository"
        style="@style/Content.Small"
        android:text="@string/n_repository"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/ic_repository"
        app:layout_constraintBottom_toBottomOf="@+id/ic_repository"
        app:layout_constraintStart_toEndOf="@+id/ic_repository" />

    <ImageView
        android:id="@+id/ic_people_networking"
        style="@style/IconProfile"
        android:src="@drawable/ic_people_networking"
        android:contentDescription="@string/icon"
        app:layout_constraintTop_toBottomOf="@+id/ic_repository"
        app:layout_constraintStart_toEndOf="@+id/guideline_left" />

    <TextView
        android:id="@+id/detail_follower"
        style="@style/Content.Small"
        android:text="@string/n_follower"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/ic_people_networking"
        app:layout_constraintBottom_toBottomOf="@+id/ic_people_networking"
        app:layout_constraintStart_toEndOf="@+id/ic_people_networking" />

    <TextView
        android:id="@+id/follower"
        style="@style/Content.Small"
        android:text="@string/follower"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@+id/detail_follower"
        app:layout_constraintBottom_toBottomOf="@+id/detail_follower"
        app:layout_constraintStart_toEndOf="@+id/detail_follower" />

    <TextView
        android:id="@+id/dot"
        style="@style/Content.Small"
        android:text="@string/dot"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/follower"
        app:layout_constraintBottom_toBottomOf="@+id/follower"
        app:layout_constraintStart_toEndOf="@+id/follower" />

    <TextView
        android:id="@+id/detail_following"
        style="@style/Content.Small"
        android:text="@string/n_following"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/dot"
        app:layout_constraintBottom_toBottomOf="@+id/dot"
        app:layout_constraintStart_toEndOf="@+id/dot" />

    <TextView
        android:id="@+id/following"
        style="@style/Content.Small"
        android:text="@string/following"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toTopOf="@+id/detail_following"
        app:layout_constraintBottom_toBottomOf="@+id/detail_following"
        app:layout_constraintStart_toEndOf="@+id/detail_following" />

    <ToggleButton
        android:id="@+id/toggle_button"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:background="@color/blue"
        android:layout_marginTop="12dp"
        android:textOff="@string/follow"
        android:textOn="@string/unfollow"
        app:layout_constraintTop_toBottomOf="@id/ic_people_networking"
        app:layout_constraintStart_toEndOf="@id/guideline_left"
        app:layout_constraintEnd_toStartOf="@id/guideline_right" />

    <TextView
        android:id="@+id/recommendation"
        style="@style/Content.Medium"
        android:text="@string/recommendation"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/toggle_button"
        app:layout_constraintStart_toEndOf="@id/guideline_left"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_users_mini"
        style="@style/RowContent"
        android:scrollbars="none"
        android:orientation="horizontal"
        android:layout_marginVertical="8dp"
        android:paddingHorizontal="8dp"
        android:clipToPadding="false"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recommendation"
        tools:listitem="@layout/card_view_user_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>